<resources>
    <string name="app_name">Book</string>
    //tác giả
    <string name="tachgia">Phạm Hải Đăng</string>
    //login page
    <string name="Register_caption">Lets Join to find Your Friends and Family Location</string>
    <string name="Login_caption">Lets Join to find Your Friends and Family Location</string>
    //nút
    <string name="add">Add</string>
    <string name="del">delete</string>
    <string name="Upadte">Update</string>
    <string name="show">Showị</string>
    <string name="AddFriend">Add Friend</string>
    <string name="remove">Remove</string>

    //place_hoder
    <string name="fist">Fistname: </string>
    <string name="last">LastName: </string>
    <string name="email">Email: </string>
    <string name="pas">Password: </string>
    <string name="_pas">Re-enter Password: </string>
    //tiêu đề
    <string name="registration">registration</string>
    <string name="fist_">FistName:</string>
    <string name="last_">LastName:</string>
    <string name="email_">Email:</string>
    <string name="pass">Password:</string>
    <string name="_pass">confirm Password:</string>
    <string name="sex">sex:</string>
    <string name="full">Fullname: </string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="forgot">forgot password?!</string>
    <string name="title">Title</string>
    //text link
    <string name="text_register">"Don't have an account yet?"</string>
    <string name="text_login">Already have an account?</string>
    //link
    <string name="link_login"><font color='blue'> sign in!</font></string>
    <string name="link_register"><font color='blue'> sign up!</font></string>
    //chat bar
    <string name="type">Type something...</string>
    <string name="username">Username</string>
    <string name="status">offline </string>
    //profile bar
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    //check box
    <string name="male">Male</string>
    <string name="female">Female</string>

    //spiner
    <array name="sex">
        <item>Male</item>
        <item>Female</item>
    </array>
    <array name="book_type">\
        <item>Arts and Music</item>
        <item>Biographies</item>
        <item>Business</item>
        <item>Comics</item>
    </array>
    //menu
    <string name="setting">Setting</string>
    <string name="shop">Shop</string>
    <string name="friends">Friends</string>
    <string name="Contact">Contact</string>
    <string name="Home">Home</string>
    <string name="Setting">Setting</string>
    <string name="Library">Library</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="matkhau">Pass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    //text mau
    <string name="text">Những người sáng lập ban đầu giới hạn tư cách thành viên của Facebook cho sinh viên Harvard và sau đó là sinh viên Columbia, Stanford và Yale. Tư cách thành viên cuối cùng đã được mở rộng sang các trường Ivy League, MIT và các tổ chức giáo dục đại học còn lại trong khu vực Boston, sau đó là các trường đại học khác và cuối cùng là học sinh trung học. Kể từ năm 2006, bất cứ ai tuyên bố ít nhất 13 tuổi đã được phép đăng ký tài khoản Facebook, mặc dù điều này có thể khác nhau tùy thuộc vào luật pháp địa phương. Tên đến từ các thư mục face book thường được trao cho sinh viên đại học Mỹ. Facebook đã tổ chức đợt chào bán công khai lần đầu (IPO) vào tháng 2 năm 2012, định giá công ty ở mức 104 tỷ USD, mức định giá lớn nhất cho đến nay đối với một công ty đại chúng mới niêm yết. Facebook kiếm phần lớn doanh thu từ các quảng cáo xuất hiện trên màn hình và trong News Feed của người dùng.Dịch vụ Facebook có thể được truy cập từ các thiết bị có kết nối Internet, như máy tính cá nhân, máy tính bảng và điện thoại thông minh. Sau khi đăng ký, người dùng có thể tạo một hồ sơ tùy chỉnh tiết lộ thông tin về bản thân. Họ có thể đăng văn bản, ảnh và đa phương tiện được chia sẻ với bất kỳ người dùng nào khác đã đồng ý làm
     của họ. Người dùng cũng có thể sử dụng các ứng dụng nhúng khác nhau, tham gia các nhóm sở thích chung và nhận thông báo về các hoạt động của bạn bè. Facebook tuyên bố rằng có hơn 2,3 tỷ người dùng hoạt động hàng tháng tính đến tháng 12 năm 2018.[9] Tuy nhiên, nó phải đối mặt với một vấn đề lớn với hàng loạt tài khoản giả mạo. Facebook đã bắt được 3 tỷ tài khoản giả, nhưng những tài khoản mà nó bỏ lỡ mới là vấn đề thực sự.[10] Nhiều nhà phê bình đặt câu hỏi liệu Facebook có biết có bao nhiêu người dùng thật hay không.[10][11][12] Facebook là một trong những công ty có giá trị nhất thế giới.
    </string>
    <string name="about">
Cuốn sách này mang lại cho tôi rất nhiều nhiều kiến thức hay trong cuộc sống, nó dạy tôi cách làm người, cách đối nhân xử
        thế và dạy tôi biết cách cư xử đúng mực với mọi người xung quanh. Con người có lẽ ai cũng có những cái yêu thích của riêng mình và tôi nghĩ rằng việc đọc sách mang lại cho tôi rất nhiều những kiến thức bổ ích. Nó giúp tôi phát triển thêm tư duy, học hỏi được nhiều bài học quý báu từ cuộc sống. Sách vở đó là tài sản tinh thần của con người, chính vì vậy, mỗi tác giả đều cố gắng chắt lọc những cái cần thiết và quan trọng nhất mà mình tích lũy được để viết lên những cuốn sách để đời. Tài sản của mỗi con người là khác nhau và bản thân tôi nghĩ rằng tài sản mà tôi có được đó là việc tích lũy vốn tri thức mà ngày ngày tôi đang dần học hỏi và rèn luyện, đó là thứ tài sản quý báu, không phải dùng bằng tiền có thể mua được, tôi phải bỏ thời gian, công sức, tài sản của mình ra để học hỏi và có được nó, chính vì vậy tôi luôn trân trọng và phát huy nó mỗi ngày. Ngày nay xã hội ngày càng phát triển, nhu cầu và thị hiếu đọc sách của người đọc cũng càng ngày càng giảm dần, chính vì thế sách vở ngày càng mất đi giá trị của nó. Công nghệ ngày càng hiện đại con người dường như quên đi nhiều thứ có giá trị của cuộc sống, họ luôn tích lũy cho mình vốn tri thức từ cuộc sống, nhưng dường như quên đi nhiều thứ, đang ra cần trân trọng và giữ gìn nó mỗi ngày. Chúng ta cần phải biết sống một cách có ý nghĩa, có như vậy khi ngoảnh lại, chúng ta mới không cảm thấy luyến tiếc vì những gì đã xảy ra với chính mình.Tác giảcó lẽ là cuốn sách mà tôi thấy nó hữu ích nhất, trong những cuốn sách mà tôi đã từng đọc, nó không chỉ làm cho tôi hiểu được nghệ thuật thuyết phục con người, biết cách sống đúng đắn hơn cho cuộc sống này, mà còn cung cấp cho ta vốn tri thức lớn. Tác giả là người hiểu rộng, tài cao, chính vì thế, những câu từ mà ông viết lên cũng luôn giàu giá trị biểu tượng, con người cần phải học hỏi, trân trọng và giữ gìn những tài sản vô giá này, đó là tài sản quý báu mà chúng ta nên học hỏi, giữ gìn và phát huy được giá trị tuyệt vời của nó.</string>
    //region
    <array name="regionArray">
        <item>VietNam</item>
        <item>US</item>
    </array>
    <!-- preference -->
    <string name="sp_key_on_off_random_color">key_on_off_random_color</string>
    <string name="sp_title_on_off_random_color">Enable/Disable Random Color</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="Changepass">Change PassWord</string>
    <string name="Search">Seach</string>
    <string name="language">English</string>
    <string name="management">Management</string>
    <string name="Statistical">Statistical</string>
    <string name="exit">Exit</string>
    <string name="Enter_email">Enter Email...</string>
    <string name="Enter_Password">Enter Password...</string>
    <string name="savelogin">Save Login</string>
    <string name="Click_here_for_Sign_Up">Click here for Sign Up</string>
    <string name="Enter_Username">Enter Username...</string>
    <string name="Enter_Phone">Enter Phone...</string>
    <string name="Enter_ConfirmPassword">Enter ConfirmPassword...</string>
    <string name="gioitinh">Sex</string>
    <string name="addbook">Add Book</string>
    <string name="Management">Management</string>
    <string name="thongbaodamhky">Sign Up Success</string>
    <string name="editprofile">Edit Profile</string>
</resources>