<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:key="img"
        android:layout="@layout/img_setting"></Preference>
    <PreferenceCategory app:title="Update">
        <Preference
            android:key="EditProfile"
            app:title="@string/EditProfile"></Preference>
        <Preference
            android:key="Changepass"
            app:title="@string/Changepass"></Preference>

    </PreferenceCategory>
    <PreferenceCategory android:title="language">
        <SwitchPreference
            android:key="language"
            android:title="@string/language"></SwitchPreference>
    </PreferenceCategory>
    <PreferenceCategory app:title="Other">
        <Preference
            android:key="logout"
            app:title="@string/logout"></Preference>
        <Preference
            android:key="Contact"
            app:title="@string/Contact"></Preference>
        <Preference
            android:key="about"
            app:title="version 3.3"></Preference>
    </PreferenceCategory>
</PreferenceScreen>

