<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/Home" />
    <item
        android:id="@+id/fragment_profile"
        android:enabled="true"
        android:icon="@drawable/useric"
        android:title="@string/profile" />
    <item
        android:id="@+id/fragment_library"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/Library" />
    <item
        android:id="@+id/fragment_Setting"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/Setting" />


</menu>