<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".ui.Edit_profile">

    <include layout="@layout/app_bar"></include>

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        app:civ_border_color="#3F51B5"
        app:civ_border_width="5dp"></de.hdodenhof.circleimageview.CircleImageView>

    <LinearLayout style="@style/LinearLayout_profile">

        <TextView
            style="@style/textview_editprofile"
            android:gravity="center"
            android:text="@string/name" />

        <EditText
            android:id="@+id/etname"
            style="@style/edittext_editProfile"
            android:inputType="textPersonName" />


    </LinearLayout>

    <LinearLayout style="@style/LinearLayout_profile">

        <TextView
            style="@style/textview_editprofile"
            android:gravity="center"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/etphone"
            style="@style/edittext_editProfile"
            android:inputType="number" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:text="@string/sex" />
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout style="@style/LinearLayout_profile">

        <TextView
            style="@style/textview_editprofile"
            android:gravity="center"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etemail"
            style="@style/edittext_editProfile"
            android:layout_marginRight="50dp"
            android:enabled="false"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <TextView
        android:id="@+id/changepass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Đổi mật khẩu"
        android:textColor="#03A9F4"
        android:textColorLink="#03A9F4" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:enabled="false"
        android:text="@string/save" />


</LinearLayout>