<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ui_menu_admin"

    android:orientation="vertical"
    tools:context=".ui.Menu_admin">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:orientation="vertical"
        android:weightSum="5">

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_weight="2"
            android:fontFamily="@font/coiny"
            android:gravity="center"

            android:text="Admin"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <Button
            android:id="@+id/quanly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_weight="1"
            android:background="@drawable/comment_edittext_shape"
            android:backgroundTint="#2196F3"
            android:text="@string/management"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <Button
            android:id="@+id/thongke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_weight="1"
            android:background="@drawable/comment_edittext_shape"
            android:backgroundTint="#2196F3"
            android:text="@string/Statistical"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <Button
            android:id="@+id/thoat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_weight="1"
            android:background="@drawable/comment_edittext_shape"
            android:backgroundTint="#2196F3"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </LinearLayout>


</LinearLayout>